@@ -28,6 +28,11 @@ import java.io.File;
  */
 public class Constants {
 
+    /**
+     * The JetS3t suite version number implemented by this service.
+     */
+    public static final String JETS3T_VERSION = "0.8.1-dev";
+
     public static String S3_DEFAULT_HOSTNAME = "s3.amazonaws.com";
     public static String GS_DEFAULT_HOSTNAME = "commondatastorage.googleapis.com";
 
