@@ -57,6 +57,7 @@ import org.jets3t.service.model.S3BucketLoggingStatus;
 import org.jets3t.service.model.S3BucketVersioningStatus;
 import org.jets3t.service.model.S3Object;
 import org.jets3t.service.model.StorageObject;
+import org.jets3t.service.model.WebsiteConfig;
 import org.jets3t.service.security.AWSDevPayCredentials;
 import org.jets3t.service.security.ProviderCredentials;
 import org.jets3t.service.utils.RestUtils;
@@ -368,7 +369,8 @@ public class RestS3Service extends S3Service {
             "location",
             "requestPayment",
             "versions", "versioning", "versionId",
-            "uploads", "uploadId", "partNumber"
+            "uploads", "uploadId", "partNumber",
+            "website"
         });
     }
 
@@ -1013,6 +1015,62 @@ public class RestS3Service extends S3Service {
                 }
             } while (incompleteListing);
             return parts;
+        } catch (ServiceException se) {
+            throw new S3ServiceException(se);
+        }
+    }
+
+    @Override
+    protected WebsiteConfig getWebsiteConfigImpl(String bucketName) throws S3ServiceException
+    {
+        try {
+            Map<String, String> requestParameters = new HashMap<String, String>();
+            requestParameters.put("website", "");
+
+            HttpMethodBase getMethod = performRestGet(bucketName, null, requestParameters, null);
+            return getXmlResponseSaxParser().parseWebsiteConfigurationResponse(
+                new HttpMethodReleaseInputStream(getMethod));
+        } catch (ServiceException se) {
+            throw new S3ServiceException(se);
+        }
+    }
+
+    @Override
+    protected void setWebsiteConfigImpl(String bucketName, WebsiteConfig config)
+        throws S3ServiceException
+    {
+        Map<String, String> requestParameters = new HashMap<String, String>();
+        requestParameters.put("website", "");
+
+        Map<String, Object> metadata = new HashMap<String, Object>();
+
+        String xml = null;
+        try {
+            xml = config.toXml();
+        } catch (Exception e) {
+            throw new S3ServiceException("Unable to build WebsiteConfig XML document", e);
+        }
+
+        try {
+            metadata.put("Content-Length", xml.length());
+            performRestPut(bucketName, null, metadata, requestParameters,
+                new StringRequestEntity(xml, "text/plain", Constants.DEFAULT_ENCODING),
+                true);
+        } catch (ServiceException se) {
+            throw new S3ServiceException(se);
+        } catch (UnsupportedEncodingException e) {
+            throw new S3ServiceException("Unable to encode XML document", e);
+        }
+    }
+
+    @Override
+    protected void deleteWebsiteConfigImpl(String bucketName)
+        throws S3ServiceException
+    {
+        try {
+            Map<String, String> requestParameters = new HashMap<String, String>();
+            requestParameters.put("website", "");
+            performRestDelete(bucketName, null, requestParameters, null, null);
         } catch (ServiceException se) {
             throw new S3ServiceException(se);
         }
